syntax = "proto3";

package ballista.protobuf;

option java_multiple_files = true;
option java_package = "org.ballistacompute.protobuf";
option java_outer_classname = "BallistaProto";

///////////////////////////////////////////////////////////////////////////////////////////////////
// Ballista Actions
///////////////////////////////////////////////////////////////////////////////////////////////////

message Action {

  // interactive query
  LogicalPlanNode query = 1;

  //TODO: write_csv, write_parquet, repartition, etc

}

///////////////////////////////////////////////////////////////////////////////////////////////////
// Ballista Logical Plan
///////////////////////////////////////////////////////////////////////////////////////////////////

// logical expressions
message LogicalExprNode {

  // column references
  string column_name = 10;
  bool has_column_name = 11;

  uint32 column_index = 12;
  bool has_column_index = 13;

  // literals
  string literal_string = 21;
  bool has_literal_string = 22;

  double literal_double = 23;
  bool has_literal_double = 24;

  int64 literal_long = 25;
  bool has_literal_long = 26;

  // binary expressions
  BinaryExprNode binary_expr = 30;

  // aggregate expressions
  AggregateExprNode aggregate_expr = 40;
}

message BinaryExprNode {
  LogicalExprNode l = 1;
  LogicalExprNode r = 2;
  string op = 3;
}

enum AggregateFunction {
  MIN = 0;
  MAX = 1;
  SUM = 2;
  AVG = 3;
  COUNT = 4;
  COUNT_DISTINCT = 5;
}

message AggregateExprNode {
  AggregateFunction aggr_function = 1;
  LogicalExprNode expr = 2;
}

// LogicalPlan is a nested type
message LogicalPlanNode {

  LogicalPlanNode input = 1;

  ScanNode scan = 10;
  ProjectionNode projection = 20;
  SelectionNode selection = 21;
  LimitNode limit = 22;
  AggregateNode aggregate = 23;
}

//TODO break this out into separate CsvScanNode and ParquetScanNode
message ScanNode {
  string path = 1;
  repeated string projection = 2;
  Schema schema = 3;
  string file_format = 4; // parquet or csv
  bool has_header = 5; // csv specific
}

message ProjectionNode {
  repeated LogicalExprNode expr = 1;
}

message SelectionNode {
  LogicalExprNode expr = 2;
}

message AggregateNode {
  repeated LogicalExprNode group_expr = 1;
  repeated LogicalExprNode aggr_expr = 2;
}

message LimitNode {
  uint32 limit = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////////////
// Ballista Physical Plan
///////////////////////////////////////////////////////////////////////////////////////////////////

// PhysicalPlanNode is a nested type
message PhysicalPlanNode {

  PhysicalPlanNode input = 1;

  ScanExecNode scan = 10;
  ProjectionExecNode projection = 20;
  SelectionExecNode selection = 21;
  GlobalLimitExecNode global_limit = 22;
  LocalLimitExecNode local_limit = 23;
  HashAggregateExecNode hash_aggregate = 30;
  ShuffleExecNode shuffle = 40;
}

message ScanExecNode {
  string path = 1;
  repeated string projection = 2;
  Schema schema = 3;
  string file_format = 4; // parquet or csv
  bool has_header = 5; // csv specific
}

message ProjectionExecNode {
  repeated LogicalExprNode expr = 1;
}

message SelectionExecNode {
  LogicalExprNode expr = 2;
}

enum AggregateMode {
  PARTIAL = 0;
  FINAL = 1;
  COMPLETE = 2;
}

message HashAggregateExecNode {
  repeated LogicalExprNode group_expr = 1;
  repeated LogicalExprNode aggr_expr = 2;
  AggregateMode mode = 3;
}

message ShuffleExecNode {

}

message GlobalLimitExecNode {
  uint32 limit = 1;
}

message LocalLimitExecNode {
  uint32 limit = 1;
}

///////////////////////////////////////////////////////////////////////////////////////////////////
// Ballista Scheduling
///////////////////////////////////////////////////////////////////////////////////////////////////

message Task {
  string job_uuid = 1;
  uint32 stage_id = 2;
  uint32 task_id = 3;
  uint32 partition_id = 4;
  PhysicalPlanNode plan = 5;
}

///////////////////////////////////////////////////////////////////////////////////////////////////
// Arrow Data Types
///////////////////////////////////////////////////////////////////////////////////////////////////

message Schema {
  repeated Field columns = 1;
}

message Field {
  // name of the field
  string name = 1;
  ArrowType arrow_type = 2;
  bool nullable = 3;
  // for complex data types like structs, unions
  repeated Field children = 4;
}

// copied from GandivaType from Apache Arrow project
enum ArrowType {
  NONE = 0;     // arrow::Type::NA
  BOOL = 1;     // arrow::Type::BOOL
  UINT8 = 2;    // arrow::Type::UINT8
  INT8 = 3;     // arrow::Type::INT8
  UINT16 = 4;   // represents arrow::Type fields in src/arrow/type.h
  INT16 = 5;
  UINT32 = 6;
  INT32 = 7;
  UINT64 = 8;
  INT64 = 9;
  HALF_FLOAT = 10;
  FLOAT = 11;
  DOUBLE = 12;
  UTF8 = 13;
  BINARY = 14;
  FIXED_SIZE_BINARY = 15;
  DATE32 = 16;
  DATE64 = 17;
  TIMESTAMP = 18;
  TIME32 = 19;
  TIME64 = 20;
  INTERVAL = 21;
  DECIMAL = 22;
  LIST = 23;
  STRUCT = 24;
  UNION = 25;
  DICTIONARY = 26;
  MAP = 27;
}
